package com.javarush.games.snake;

public enum Direction {
    UP, DOWN, LEFT, RIGHT
}
